Домашняя работа 1.Api Яндекс погоды прописал в local.properties и добавил в  .gitignore. Добавил основную иконку приложения. Добавил виджет, думаю в будущем выводить на него город и погоду(или только погоду).

--- a/WeatherApp/app/src/main/res/values/strings.xml
+++ b/WeatherApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">WeatherApp</string>
+    <string name="temperature">Температура</string>
+    <string name="feels_like_label">Ощущается как:</string>
+    <string name="city_coordinates">Широта/Долгота: %s, %s"</string>
+    <string name="appwidget_text">Пока что тут пусто)</string>
+    <string name="add_widget">Add widget</string>
 </resources>
